testsuite/tests/v1/un_op/logic/not/non_bool/test.out
Error: Invalid expression type
   ╭─[ <working-dir>/script.lkql:3:11 ]
   │
 3 │ print(not int)
   │           ─┬─  
   │            ╰─── Expecting a "Bool", got a "Int"
───╯
